--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@stripe/react-stripe-js": "^2.7.3",
     "@stripe/stripe-js": "^4.1.0",
     "axios": "^1.7.3",
+    "backend": "file:..",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.3.21",
     "react": "^18.3.1",
